--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,4 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
-
+<h2>Welcome to this POC on engines</h2>
 {{outlet}}
+{{#link-to 'home'}}Home{{/link-to}}&nbsp;
+{{#link-to "lib"}}Library{{/link-to}}
